Added readme info on setup